Renamed existing 'ResourceLoader.getResource()' method to 'getResourceAsStream()' and added new 'ResourceLoader.getResource()' method, which returns an URL. This is the same API as the 'Class' and 'ClassLoader' use for resources.